ansible/playbooks/roles/dashboard/files/dashboard_ingress.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  labels:
    k8s-app: kubernetes-dashboard
spec:
  tls:
    - hosts:
        - dashboard.local
      secretName: tls-kube-app
  rules:
  - host: 
      dashboard.local
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
